fix menu align & add css3 transition support

--- a/css/componment/frame.search.less
+++ b/css/componment/frame.search.less
@@ -7,4 +7,5 @@
 }
 #searchform #s {
     width:160px;
+    text-align: left;
 }
