--- a/css/componment/theme.default.less
+++ b/css/componment/theme.default.less
@@ -58,6 +58,7 @@ img {
 .page-title {
     font-family: @distincionpp_conf_font_family;
     font-size: 40px;
+    margin: 0 0 0 40px;
 }
 .page-title span{
     text-transform:capitalize;
